utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/CommonConfiguration.ide
package valid

typedef configuration CommonConfiguration {
    label "Some nice Configuration Type"

    backend task main
}
