utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/CircularDependencyConfiguration.ide
package invalid

typedef configuration CircularDependencyConfiguration {
    label "Some Configuration"

    configuration sub: CircularDependencyConfigurationComponent {

    }

    frontend task main
}
